// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileChart snapshot (Step 7 oracle) > clipped-domain bar chart (data outside scale.domain filtered) 1`] = `
{
  "a11y": {
    "altText": "Bar chart showing Clipped Values (5 data points)",
    "dataTableFallback": [
      [
        "value",
        "name",
      ],
      [
        10,
        "A",
      ],
      [
        25,
        "B",
      ],
      [
        40,
        "C",
      ],
      [
        75,
        "D",
      ],
      [
        90,
        "E",
      ],
    ],
    "keyboardNavigable": true,
    "role": "img",
  },
  "animation": undefined,
  "annotations": [],
  "area": {
    "height": 297.4,
    "width": 541.73,
    "x": 35.269999999999996,
    "y": 59.6,
  },
  "axes": {
    "x": {
      "domainLine": undefined,
      "end": {
        "x": 577,
        "y": 357,
      },
      "gridlines": [],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#1d1d1d",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 500,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 35.269999999999996,
        "y": 357,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#888888",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "ticks": [
        {
          "label": "0",
          "position": 35.269999999999996,
          "value": 0,
        },
        {
          "label": "20",
          "position": 251.96200000000002,
          "value": 20,
        },
        {
          "label": "40",
          "position": 468.654,
          "value": 40,
        },
      ],
      "titlePadding": undefined,
    },
    "y": {
      "domainLine": undefined,
      "end": {
        "x": 35.269999999999996,
        "y": 357,
      },
      "gridlines": [
        {
          "major": true,
          "position": 297.0761194029851,
        },
        {
          "major": true,
          "position": 208.3,
        },
        {
          "major": true,
          "position": 119.52388059701492,
        },
      ],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#1d1d1d",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 500,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 35.269999999999996,
        "y": 59.6,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#888888",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "ticks": [
        {
          "label": "A",
          "position": 297.0761194029851,
          "value": "A",
        },
        {
          "label": "B",
          "position": 208.3,
          "value": "B",
        },
        {
          "label": "C",
          "position": 119.52388059701492,
          "value": "C",
        },
      ],
      "titlePadding": undefined,
    },
  },
  "chrome": {
    "bottomHeight": 0,
    "title": {
      "maxWidth": 561,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#333333",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 22,
        "fontWeight": 700,
        "lineHeight": 1.3,
        "textAnchor": "start",
      },
      "text": "Clipped Values",
      "x": 17,
      "y": 17,
    },
    "topHeight": 36.6,
  },
  "crosshair": false,
  "dimensions": {
    "height": 400,
    "width": 600,
  },
  "display": "full",
  "legend": {
    "bounds": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "entries": [],
    "entryGap": 16,
    "labelStyle": {
      "fill": "#1d1d1d",
      "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 11,
      "fontWeight": 400,
      "lineHeight": 1.3,
    },
    "position": "top",
    "swatchGap": 6,
    "swatchSize": 12,
  },
  "marks": [
    {
      "aria": {
        "label": "A: 10",
      },
      "cornerRadius": 2,
      "data": {
        "name": "A",
        "value": 10,
      },
      "fill": "#1b7fa3",
      "height": 57.7044776119403,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "central",
          "fill": "#ffffff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "end",
        },
        "text": "10",
        "visible": true,
        "x": 137.616,
        "y": 297.0761194029851,
      },
      "orient": "horizontal",
      "type": "rect",
      "width": 108.34600000000002,
      "x": 35.269999999999996,
      "y": 268.22388059701495,
    },
    {
      "aria": {
        "label": "B: 25",
      },
      "cornerRadius": 2,
      "data": {
        "name": "B",
        "value": 25,
      },
      "fill": "#1b7fa3",
      "height": 57.7044776119403,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "central",
          "fill": "#ffffff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "end",
        },
        "text": "25",
        "visible": true,
        "x": 300.135,
        "y": 208.3,
      },
      "orient": "horizontal",
      "type": "rect",
      "width": 270.865,
      "x": 35.269999999999996,
      "y": 179.44776119402985,
    },
    {
      "aria": {
        "label": "C: 40",
      },
      "cornerRadius": 2,
      "data": {
        "name": "C",
        "value": 40,
      },
      "fill": "#1b7fa3",
      "height": 57.7044776119403,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "central",
          "fill": "#ffffff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "end",
        },
        "text": "40",
        "visible": true,
        "x": 462.654,
        "y": 119.52388059701492,
      },
      "orient": "horizontal",
      "type": "rect",
      "width": 433.384,
      "x": 35.269999999999996,
      "y": 90.67164179104478,
    },
  ],
  "theme": {
    "borderRadius": 4,
    "chrome": {
      "byline": {
        "color": "#999999",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "footer": {
        "color": "#999999",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "source": {
        "color": "#999999",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "subtitle": {
        "color": "#666666",
        "fontSize": 15,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "title": {
        "color": "#333333",
        "fontSize": 22,
        "fontWeight": 700,
        "lineHeight": 1.3,
      },
    },
    "colors": {
      "annotationFill": "rgba(0,0,0,0.04)",
      "annotationText": "#555555",
      "axis": "#888888",
      "background": "#ffffff",
      "categorical": [
        "#1b7fa3",
        "#c44e52",
        "#6a9f58",
        "#d47215",
        "#507e79",
        "#9a6a8d",
        "#c4636b",
        "#9c755f",
        "#a88f22",
        "#858078",
      ],
      "diverging": {
        "brownTeal": [
          "#8c510a",
          "#bf812d",
          "#dfc27d",
          "#f6e8c3",
          "#80cdc1",
          "#35978f",
          "#01665e",
        ],
        "redBlue": [
          "#b2182b",
          "#d6604d",
          "#f4a582",
          "#f7f7f7",
          "#92c5de",
          "#4393c3",
          "#2166ac",
        ],
      },
      "gridline": "#e8e8e8",
      "sequential": {
        "blue": [
          "#deebf7",
          "#c6dbef",
          "#9ecae1",
          "#6baed6",
          "#3182bd",
          "#08519c",
        ],
        "green": [
          "#e5f5e0",
          "#c7e9c0",
          "#a1d99b",
          "#74c476",
          "#31a354",
          "#006d2c",
        ],
        "orange": [
          "#fee6ce",
          "#fdd0a2",
          "#fdae6b",
          "#fd8d3c",
          "#e6550d",
          "#a63603",
        ],
        "purple": [
          "#efedf5",
          "#dadaeb",
          "#bcbddc",
          "#9e9ac8",
          "#756bb1",
          "#54278f",
        ],
      },
      "text": "#1d1d1d",
    },
    "fonts": {
      "family": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "mono": ""JetBrains Mono", "Fira Code", "Cascadia Code", monospace",
      "sizes": {
        "axisTick": 11,
        "body": 13,
        "small": 11,
        "subtitle": 15,
        "title": 22,
      },
      "weights": {
        "bold": 700,
        "medium": 500,
        "normal": 400,
        "semibold": 600,
      },
    },
    "isDark": false,
    "spacing": {
      "axisMargin": 6,
      "chartToFooter": 8,
      "chromeGap": 4,
      "chromeToChart": 8,
      "padding": 20,
    },
  },
  "tooltipDescriptors": [
    [
      "rect-0",
      {
        "fields": [
          {
            "color": "#1b7fa3",
            "label": "name",
            "value": "A",
          },
          {
            "label": "value",
            "value": "10",
          },
        ],
        "title": "A",
      },
    ],
    [
      "rect-1",
      {
        "fields": [
          {
            "color": "#1b7fa3",
            "label": "name",
            "value": "B",
          },
          {
            "label": "value",
            "value": "25",
          },
        ],
        "title": "B",
      },
    ],
    [
      "rect-2",
      {
        "fields": [
          {
            "color": "#1b7fa3",
            "label": "name",
            "value": "C",
          },
          {
            "label": "value",
            "value": "40",
          },
        ],
        "title": "C",
      },
    ],
  ],
  "watermark": false,
}
`;

exports[`compileChart snapshot (Step 7 oracle) > legend-heavy multi-series line chart 1`] = `
{
  "a11y": {
    "altText": "Line chart showing GDP Growth from 2020 to 2021 with 4 series (US, UK, FR, DE) (8 data points)",
    "dataTableFallback": [
      [
        "date",
        "value",
        "country",
      ],
      [
        "2020-01-01",
        10,
        "US",
      ],
      [
        "2021-01-01",
        40,
        "US",
      ],
      [
        "2020-01-01",
        15,
        "UK",
      ],
      [
        "2021-01-01",
        35,
        "UK",
      ],
      [
        "2020-01-01",
        8,
        "FR",
      ],
      [
        "2021-01-01",
        22,
        "FR",
      ],
      [
        "2020-01-01",
        12,
        "DE",
      ],
      [
        "2021-01-01",
        28,
        "DE",
      ],
    ],
    "keyboardNavigable": true,
    "role": "img",
  },
  "animation": undefined,
  "annotations": [],
  "area": {
    "height": 322.79999999999995,
    "width": 661.753,
    "x": 42.54,
    "y": 87.6,
  },
  "axes": {
    "x": undefined,
    "y": {
      "domainLine": undefined,
      "end": {
        "x": 42.54,
        "y": 410.4,
      },
      "gridlines": [
        {
          "major": true,
          "position": 410.4,
        },
        {
          "major": true,
          "position": 370.04999999999995,
        },
        {
          "major": true,
          "position": 329.69999999999993,
        },
        {
          "major": true,
          "position": 289.35,
        },
        {
          "major": true,
          "position": 249,
        },
        {
          "major": true,
          "position": 208.64999999999998,
        },
        {
          "major": true,
          "position": 168.29999999999998,
        },
        {
          "major": true,
          "position": 127.94999999999999,
        },
        {
          "major": true,
          "position": 87.6,
        },
      ],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#1d1d1d",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 500,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 42.54,
        "y": 87.6,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#888888",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "ticks": [
        {
          "label": "0",
          "position": 410.4,
          "value": 0,
        },
        {
          "label": "5",
          "position": 370.04999999999995,
          "value": 5,
        },
        {
          "label": "10",
          "position": 329.69999999999993,
          "value": 10,
        },
        {
          "label": "15",
          "position": 289.35,
          "value": 15,
        },
        {
          "label": "20",
          "position": 249,
          "value": 20,
        },
        {
          "label": "25",
          "position": 208.64999999999998,
          "value": 25,
        },
        {
          "label": "30",
          "position": 168.29999999999998,
          "value": 30,
        },
        {
          "label": "35",
          "position": 127.94999999999999,
          "value": 35,
        },
        {
          "label": "40",
          "position": 87.6,
          "value": 40,
        },
      ],
      "titlePadding": undefined,
    },
  },
  "chrome": {
    "bottomHeight": 43.6,
    "source": {
      "maxWidth": 755,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#999999",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
        "textAnchor": "start",
      },
      "text": "World Bank",
      "x": 20,
      "y": 8,
    },
    "subtitle": {
      "maxWidth": 755,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#666666",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 15,
        "fontWeight": 400,
        "lineHeight": 1.4,
        "textAnchor": "start",
      },
      "text": "Four-country comparison",
      "x": 20,
      "y": 52.6,
    },
    "title": {
      "maxWidth": 755,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#333333",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 22,
        "fontWeight": 700,
        "lineHeight": 1.3,
        "textAnchor": "start",
      },
      "text": "GDP Growth",
      "x": 20,
      "y": 20,
    },
    "topHeight": 61.599999999999994,
  },
  "crosshair": false,
  "dimensions": {
    "height": 500,
    "width": 800,
  },
  "display": "full",
  "legend": {
    "bounds": {
      "height": 85.2,
      "width": 46.54,
      "x": 712.293,
      "y": 87.6,
    },
    "entries": [
      {
        "active": true,
        "color": "#1b7fa3",
        "label": "US",
        "shape": "line",
      },
      {
        "active": true,
        "color": "#c44e52",
        "label": "UK",
        "shape": "line",
      },
      {
        "active": true,
        "color": "#6a9f58",
        "label": "FR",
        "shape": "line",
      },
      {
        "active": true,
        "color": "#d47215",
        "label": "DE",
        "shape": "line",
      },
    ],
    "entryGap": 4,
    "labelStyle": {
      "fill": "#1d1d1d",
      "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 11,
      "fontWeight": 400,
      "lineHeight": 1.3,
    },
    "position": "right",
    "swatchGap": 6,
    "swatchSize": 12,
  },
  "marks": [
    {
      "aria": {
        "label": "US: line with 2 data points",
      },
      "data": [
        {
          "country": "US",
          "date": "2020-01-01",
          "value": 10,
        },
        {
          "country": "US",
          "date": "2021-01-01",
          "value": 40,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "US",
            "date": "2020-01-01",
            "value": 10,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#1b7fa3",
                "label": "country",
                "value": "US",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "10",
              },
              {
                "label": "date",
                "value": "2020",
              },
            ],
            "title": "2020",
          },
          "x": 42.54,
          "y": 329.69999999999993,
        },
        {
          "datum": {
            "country": "US",
            "date": "2021-01-01",
            "value": 40,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#1b7fa3",
                "label": "country",
                "value": "US",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "40",
              },
              {
                "label": "date",
                "value": "2021",
              },
            ],
            "title": "2021",
          },
          "x": 704.293,
          "y": 87.6,
        },
      ],
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "central",
          "fill": "#1b7fa3",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "start",
        },
        "text": "US",
        "visible": true,
        "x": 710.293,
        "y": 81,
      },
      "opacity": undefined,
      "path": "M42.54,329.7L704.293,87.6",
      "points": [
        {
          "x": 42.54,
          "y": 329.69999999999993,
        },
        {
          "x": 704.293,
          "y": 87.6,
        },
      ],
      "seriesKey": "US",
      "stroke": "#1b7fa3",
      "strokeDasharray": undefined,
      "strokeWidth": 2.5,
      "type": "line",
    },
    {
      "aria": {
        "label": "UK: line with 2 data points",
      },
      "data": [
        {
          "country": "UK",
          "date": "2020-01-01",
          "value": 15,
        },
        {
          "country": "UK",
          "date": "2021-01-01",
          "value": 35,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "UK",
            "date": "2020-01-01",
            "value": 15,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#c44e52",
                "label": "country",
                "value": "UK",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "15",
              },
              {
                "label": "date",
                "value": "2020",
              },
            ],
            "title": "2020",
          },
          "x": 42.54,
          "y": 289.35,
        },
        {
          "datum": {
            "country": "UK",
            "date": "2021-01-01",
            "value": 35,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#c44e52",
                "label": "country",
                "value": "UK",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "35",
              },
              {
                "label": "date",
                "value": "2021",
              },
            ],
            "title": "2021",
          },
          "x": 704.293,
          "y": 127.94999999999999,
        },
      ],
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "central",
          "fill": "#c44e52",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "start",
        },
        "text": "UK",
        "visible": true,
        "x": 710.293,
        "y": 121.35,
      },
      "opacity": undefined,
      "path": "M42.54,289.35L704.293,127.95",
      "points": [
        {
          "x": 42.54,
          "y": 289.35,
        },
        {
          "x": 704.293,
          "y": 127.94999999999999,
        },
      ],
      "seriesKey": "UK",
      "stroke": "#c44e52",
      "strokeDasharray": undefined,
      "strokeWidth": 2.5,
      "type": "line",
    },
    {
      "aria": {
        "label": "FR: line with 2 data points",
      },
      "data": [
        {
          "country": "FR",
          "date": "2020-01-01",
          "value": 8,
        },
        {
          "country": "FR",
          "date": "2021-01-01",
          "value": 22,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "FR",
            "date": "2020-01-01",
            "value": 8,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#6a9f58",
                "label": "country",
                "value": "FR",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "8",
              },
              {
                "label": "date",
                "value": "2020",
              },
            ],
            "title": "2020",
          },
          "x": 42.54,
          "y": 345.84,
        },
        {
          "datum": {
            "country": "FR",
            "date": "2021-01-01",
            "value": 22,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#6a9f58",
                "label": "country",
                "value": "FR",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "22",
              },
              {
                "label": "date",
                "value": "2021",
              },
            ],
            "title": "2021",
          },
          "x": 704.293,
          "y": 232.85999999999999,
        },
      ],
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "central",
          "fill": "#6a9f58",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "start",
        },
        "text": "FR",
        "visible": true,
        "x": 710.293,
        "y": 226.26,
      },
      "opacity": undefined,
      "path": "M42.54,345.84L704.293,232.86",
      "points": [
        {
          "x": 42.54,
          "y": 345.84,
        },
        {
          "x": 704.293,
          "y": 232.85999999999999,
        },
      ],
      "seriesKey": "FR",
      "stroke": "#6a9f58",
      "strokeDasharray": undefined,
      "strokeWidth": 2.5,
      "type": "line",
    },
    {
      "aria": {
        "label": "DE: line with 2 data points",
      },
      "data": [
        {
          "country": "DE",
          "date": "2020-01-01",
          "value": 12,
        },
        {
          "country": "DE",
          "date": "2021-01-01",
          "value": 28,
        },
      ],
      "dataPoints": [
        {
          "datum": {
            "country": "DE",
            "date": "2020-01-01",
            "value": 12,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#d47215",
                "label": "country",
                "value": "DE",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "12",
              },
              {
                "label": "date",
                "value": "2020",
              },
            ],
            "title": "2020",
          },
          "x": 42.54,
          "y": 313.55999999999995,
        },
        {
          "datum": {
            "country": "DE",
            "date": "2021-01-01",
            "value": 28,
          },
          "tooltip": {
            "fields": [
              {
                "color": "#d47215",
                "label": "country",
                "value": "DE",
              },
              {
                "color": undefined,
                "label": "value",
                "value": "28",
              },
              {
                "label": "date",
                "value": "2021",
              },
            ],
            "title": "2021",
          },
          "x": 704.293,
          "y": 184.44,
        },
      ],
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "central",
          "fill": "#d47215",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 11,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "start",
        },
        "text": "DE",
        "visible": true,
        "x": 710.293,
        "y": 177.84,
      },
      "opacity": undefined,
      "path": "M42.54,313.56L704.293,184.44",
      "points": [
        {
          "x": 42.54,
          "y": 313.55999999999995,
        },
        {
          "x": 704.293,
          "y": 184.44,
        },
      ],
      "seriesKey": "DE",
      "stroke": "#d47215",
      "strokeDasharray": undefined,
      "strokeWidth": 2.5,
      "type": "line",
    },
  ],
  "theme": {
    "borderRadius": 4,
    "chrome": {
      "byline": {
        "color": "#999999",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "footer": {
        "color": "#999999",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "source": {
        "color": "#999999",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "subtitle": {
        "color": "#666666",
        "fontSize": 15,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "title": {
        "color": "#333333",
        "fontSize": 22,
        "fontWeight": 700,
        "lineHeight": 1.3,
      },
    },
    "colors": {
      "annotationFill": "rgba(0,0,0,0.04)",
      "annotationText": "#555555",
      "axis": "#888888",
      "background": "#ffffff",
      "categorical": [
        "#1b7fa3",
        "#c44e52",
        "#6a9f58",
        "#d47215",
        "#507e79",
        "#9a6a8d",
        "#c4636b",
        "#9c755f",
        "#a88f22",
        "#858078",
      ],
      "diverging": {
        "brownTeal": [
          "#8c510a",
          "#bf812d",
          "#dfc27d",
          "#f6e8c3",
          "#80cdc1",
          "#35978f",
          "#01665e",
        ],
        "redBlue": [
          "#b2182b",
          "#d6604d",
          "#f4a582",
          "#f7f7f7",
          "#92c5de",
          "#4393c3",
          "#2166ac",
        ],
      },
      "gridline": "#e8e8e8",
      "sequential": {
        "blue": [
          "#deebf7",
          "#c6dbef",
          "#9ecae1",
          "#6baed6",
          "#3182bd",
          "#08519c",
        ],
        "green": [
          "#e5f5e0",
          "#c7e9c0",
          "#a1d99b",
          "#74c476",
          "#31a354",
          "#006d2c",
        ],
        "orange": [
          "#fee6ce",
          "#fdd0a2",
          "#fdae6b",
          "#fd8d3c",
          "#e6550d",
          "#a63603",
        ],
        "purple": [
          "#efedf5",
          "#dadaeb",
          "#bcbddc",
          "#9e9ac8",
          "#756bb1",
          "#54278f",
        ],
      },
      "text": "#1d1d1d",
    },
    "fonts": {
      "family": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "mono": ""JetBrains Mono", "Fira Code", "Cascadia Code", monospace",
      "sizes": {
        "axisTick": 11,
        "body": 13,
        "small": 11,
        "subtitle": 15,
        "title": 22,
      },
      "weights": {
        "bold": 700,
        "medium": 500,
        "normal": 400,
        "semibold": 600,
      },
    },
    "isDark": false,
    "spacing": {
      "axisMargin": 6,
      "chartToFooter": 8,
      "chromeGap": 4,
      "chromeToChart": 8,
      "padding": 20,
    },
  },
  "tooltipDescriptors": [],
  "watermark": false,
}
`;

exports[`compileChart snapshot (Step 7 oracle) > watermarked column chart with gradient fill 1`] = `
{
  "a11y": {
    "altText": "Bar chart showing Gradient Columns across 4 categories (4 data points)",
    "dataTableFallback": [
      [
        "category",
        "score",
      ],
      [
        "A",
        30,
      ],
      [
        "B",
        55,
      ],
      [
        "C",
        70,
      ],
      [
        "D",
        45,
      ],
    ],
    "keyboardNavigable": true,
    "role": "img",
  },
  "animation": undefined,
  "annotations": [],
  "area": {
    "height": 237.2,
    "width": 535.46,
    "x": 41.54,
    "y": 59.6,
  },
  "axes": {
    "x": {
      "domainLine": undefined,
      "end": {
        "x": 577,
        "y": 296.8,
      },
      "gridlines": [],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#1d1d1d",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 500,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 41.54,
        "y": 296.8,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#888888",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "ticks": [
        {
          "label": "A",
          "position": 124.62862068965518,
          "value": "A",
        },
        {
          "label": "B",
          "position": 247.7228735632184,
          "value": "B",
        },
        {
          "label": "C",
          "position": 370.8171264367816,
          "value": "C",
        },
        {
          "label": "D",
          "position": 493.9113793103449,
          "value": "D",
        },
      ],
      "titlePadding": undefined,
    },
    "y": {
      "domainLine": undefined,
      "end": {
        "x": 41.54,
        "y": 296.8,
      },
      "gridlines": [
        {
          "major": true,
          "position": 296.8,
        },
        {
          "major": true,
          "position": 229.02857142857144,
        },
        {
          "major": true,
          "position": 161.25714285714287,
        },
        {
          "major": true,
          "position": 93.4857142857143,
        },
      ],
      "label": undefined,
      "labelFlush": undefined,
      "labelOverlap": undefined,
      "labelPadding": undefined,
      "labelStyle": {
        "fill": "#1d1d1d",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 13,
        "fontWeight": 500,
        "lineHeight": 1.3,
      },
      "offset": undefined,
      "orient": undefined,
      "start": {
        "x": 41.54,
        "y": 59.6,
      },
      "tickAngle": undefined,
      "tickLabelStyle": {
        "fill": "#888888",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 11,
        "fontVariant": "tabular-nums",
        "fontWeight": 400,
        "lineHeight": 1.2,
      },
      "tickMarks": undefined,
      "ticks": [
        {
          "label": "0",
          "position": 296.8,
          "value": 0,
        },
        {
          "label": "20",
          "position": 229.02857142857144,
          "value": 20,
        },
        {
          "label": "40",
          "position": 161.25714285714287,
          "value": 40,
        },
        {
          "label": "60",
          "position": 93.4857142857143,
          "value": 60,
        },
      ],
      "titlePadding": undefined,
    },
  },
  "chrome": {
    "bottomHeight": 60.2,
    "byline": {
      "maxWidth": 431,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#999999",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
        "textAnchor": "start",
      },
      "text": "By the engine",
      "x": 17,
      "y": 27.6,
    },
    "source": {
      "maxWidth": 431,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#999999",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
        "textAnchor": "start",
      },
      "text": "Test data",
      "x": 17,
      "y": 8,
    },
    "title": {
      "maxWidth": 561,
      "style": {
        "dominantBaseline": "hanging",
        "fill": "#333333",
        "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
        "fontSize": 22,
        "fontWeight": 700,
        "lineHeight": 1.3,
        "textAnchor": "start",
      },
      "text": "Gradient Columns",
      "x": 17,
      "y": 17,
    },
    "topHeight": 36.6,
  },
  "crosshair": false,
  "dimensions": {
    "height": 400,
    "width": 600,
  },
  "display": "full",
  "legend": {
    "bounds": {
      "height": 0,
      "width": 0,
      "x": 0,
      "y": 0,
    },
    "entries": [],
    "entryGap": 16,
    "labelStyle": {
      "fill": "#1d1d1d",
      "fontFamily": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "fontSize": 11,
      "fontWeight": 400,
      "lineHeight": 1.3,
    },
    "position": "top",
    "swatchGap": 6,
    "swatchSize": 12,
  },
  "marks": [
    {
      "aria": {
        "label": "A: 30",
      },
      "cornerRadius": 2,
      "data": {
        "category": "A",
        "score": 30,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 101.65714285714287,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "auto",
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "30",
        "visible": true,
        "x": 124.62862068965518,
        "y": 177.14285714285714,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 80.01126436781611,
      "x": 84.62298850574712,
      "y": 195.14285714285714,
    },
    {
      "aria": {
        "label": "B: 55",
      },
      "cornerRadius": 2,
      "data": {
        "category": "B",
        "score": 55,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 186.37142857142857,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "auto",
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "55",
        "visible": true,
        "x": 247.7228735632184,
        "y": 92.42857142857144,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 80.01126436781611,
      "x": 207.71724137931034,
      "y": 110.42857142857144,
    },
    {
      "aria": {
        "label": "C: 70",
      },
      "cornerRadius": 2,
      "data": {
        "category": "C",
        "score": 70,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 237.20000000000002,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "auto",
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "70",
        "visible": true,
        "x": 370.8171264367816,
        "y": 41.6,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 80.01126436781611,
      "x": 330.81149425287356,
      "y": 59.6,
    },
    {
      "aria": {
        "label": "D: 45",
      },
      "cornerRadius": 2,
      "data": {
        "category": "D",
        "score": 45,
      },
      "fill": {
        "stops": [
          {
            "color": "#ff0000",
            "offset": 0,
          },
          {
            "color": "#0000ff",
            "offset": 1,
          },
        ],
        "type": "linear",
      },
      "height": 152.48571428571432,
      "label": {
        "connector": undefined,
        "style": {
          "dominantBaseline": "auto",
          "fill": "#0000ff",
          "fontFamily": "system-ui, -apple-system, sans-serif",
          "fontSize": 10,
          "fontWeight": 600,
          "lineHeight": 1.2,
          "textAnchor": "middle",
        },
        "text": "45",
        "visible": true,
        "x": 493.9113793103449,
        "y": 126.31428571428569,
      },
      "orient": "vertical",
      "type": "rect",
      "width": 80.01126436781611,
      "x": 453.90574712643684,
      "y": 144.3142857142857,
    },
  ],
  "theme": {
    "borderRadius": 4,
    "chrome": {
      "byline": {
        "color": "#999999",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "footer": {
        "color": "#999999",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "source": {
        "color": "#999999",
        "fontSize": 12,
        "fontWeight": 400,
        "lineHeight": 1.3,
      },
      "subtitle": {
        "color": "#666666",
        "fontSize": 15,
        "fontWeight": 400,
        "lineHeight": 1.4,
      },
      "title": {
        "color": "#333333",
        "fontSize": 22,
        "fontWeight": 700,
        "lineHeight": 1.3,
      },
    },
    "colors": {
      "annotationFill": "rgba(0,0,0,0.04)",
      "annotationText": "#555555",
      "axis": "#888888",
      "background": "#ffffff",
      "categorical": [
        "#1b7fa3",
        "#c44e52",
        "#6a9f58",
        "#d47215",
        "#507e79",
        "#9a6a8d",
        "#c4636b",
        "#9c755f",
        "#a88f22",
        "#858078",
      ],
      "diverging": {
        "brownTeal": [
          "#8c510a",
          "#bf812d",
          "#dfc27d",
          "#f6e8c3",
          "#80cdc1",
          "#35978f",
          "#01665e",
        ],
        "redBlue": [
          "#b2182b",
          "#d6604d",
          "#f4a582",
          "#f7f7f7",
          "#92c5de",
          "#4393c3",
          "#2166ac",
        ],
      },
      "gridline": "#e8e8e8",
      "sequential": {
        "blue": [
          "#deebf7",
          "#c6dbef",
          "#9ecae1",
          "#6baed6",
          "#3182bd",
          "#08519c",
        ],
        "green": [
          "#e5f5e0",
          "#c7e9c0",
          "#a1d99b",
          "#74c476",
          "#31a354",
          "#006d2c",
        ],
        "orange": [
          "#fee6ce",
          "#fdd0a2",
          "#fdae6b",
          "#fd8d3c",
          "#e6550d",
          "#a63603",
        ],
        "purple": [
          "#efedf5",
          "#dadaeb",
          "#bcbddc",
          "#9e9ac8",
          "#756bb1",
          "#54278f",
        ],
      },
      "text": "#1d1d1d",
    },
    "fonts": {
      "family": "Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif",
      "mono": ""JetBrains Mono", "Fira Code", "Cascadia Code", monospace",
      "sizes": {
        "axisTick": 11,
        "body": 13,
        "small": 11,
        "subtitle": 15,
        "title": 22,
      },
      "weights": {
        "bold": 700,
        "medium": 500,
        "normal": 400,
        "semibold": 600,
      },
    },
    "isDark": false,
    "spacing": {
      "axisMargin": 6,
      "chartToFooter": 8,
      "chromeGap": 4,
      "chromeToChart": 8,
      "padding": 20,
    },
  },
  "tooltipDescriptors": [
    [
      "rect-0",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "30",
          },
          {
            "label": "category",
            "value": "A",
          },
        ],
        "title": "A",
      },
    ],
    [
      "rect-1",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "55",
          },
          {
            "label": "category",
            "value": "B",
          },
        ],
        "title": "B",
      },
    ],
    [
      "rect-2",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "70",
          },
          {
            "label": "category",
            "value": "C",
          },
        ],
        "title": "C",
      },
    ],
    [
      "rect-3",
      {
        "fields": [
          {
            "color": "#0000ff",
            "label": "score",
            "value": "45",
          },
          {
            "label": "category",
            "value": "D",
          },
        ],
        "title": "D",
      },
    ],
  ],
  "watermark": true,
}
`;
